k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-test-frontend
  labels:
    app: express-test-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    matchLabels:
      app: express-test-frontend
  template:
    metadata:
      labels:
        app: express-test-frontend
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: frontend
        image: marcelm119/dev-repo:express-test-frontend-latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
